WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153881
WebKit for iOS Simulator fails to build with public iOS SDK
https://bugs.webkit.org/show_bug.cgi?id=153881
Summary
WebKit for iOS Simulator fails to build with public iOS SDK
Daniel Bates
Reported
2016-02-04 11:52:32 PST
The build fails to link WebCore with the following errors: duplicate symbol _kMGQAppleInternalInstallCapability in: /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/Device.o /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/NavigatorBase.o duplicate symbol _kMGQiPadCapability in: /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/Device.o /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/NavigatorBase.o ... duplicate symbol _kMGQMainScreenScale in: /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/Device.o /Users/dbates/Desktop/WebKit/WebKitBuild/WebCore.build/Debug-iphonesimulator/WebCore.build/Objects-normal/x86_64/UserAgentIOS.o ld: 24 duplicate symbols for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation) And fails to compile WebKit2 because of redefinition/declaration-mismatch errors with the definitions/declarations in file Source/WebKit2/Platform/spi/ios/UIKitSPI.h.
Attachments
Patch
(3.57 KB, patch)
2016-02-04 11:59 PST
,
Daniel Bates
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-02-04 11:59:04 PST
Created
attachment 270679
[details]
Patch
Alex Christensen
Comment 2
2016-02-04 13:15:09 PST
Comment on
attachment 270679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=270679&action=review
> Source/WebKit2/Platform/spi/ios/UIKitSPI.h:236 > +#if __IPHONE_OS_VERSION_MIN_REQUIRED < 90200
Shouldn't this have something to do with MAX if we are checking that it is < a number?
> Source/WebKit2/Platform/spi/ios/UIKitSPI.h:292 > +#if __IPHONE_OS_VERSION_MIN_REQUIRED < 90100
ditto
Daniel Bates
Comment 3
2016-02-04 13:50:45 PST
(In reply to
comment #2
)
> Comment on
attachment 270679
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=270679&action=review
> > > Source/WebKit2/Platform/spi/ios/UIKitSPI.h:236 > > +#if __IPHONE_OS_VERSION_MIN_REQUIRED < 90200 > > Shouldn't this have something to do with MAX if we are checking that it is < > a number?
Oops! We should use __IPHONE_OS_VERSION_MAX_ALLOWED, which is the SDK version.
> > > Source/WebKit2/Platform/spi/ios/UIKitSPI.h:292 > > +#if __IPHONE_OS_VERSION_MIN_REQUIRED < 90100 > > ditto
Will change to use __IPHONE_OS_VERSION_MAX_ALLOWED.
Daniel Bates
Comment 4
2016-02-04 13:52:52 PST
Committed
r196148
: <
http://trac.webkit.org/changeset/196148
>
Daniel Bates
Comment 5
2016-02-13 11:01:57 PST
***
Bug 153620
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug