WebKit for iOS Simulator fails to build with public iOS SDK https://bugs.webkit.org/show_bug.cgi?id=153881

Reviewed by Alex Christensen.

Source/WebCore:

Make constants have internal linkage to match the Apple Internal SDK.

* platform/spi/ios/MobileGestaltSPI.h:

Source/WebKit2:

Add version guards around SPI that is now API as of iOS SDK 9.2. Until we upgrade the iOS EWS
and iOS buildbots to use the 9.2 SDK we need to keep these SPI declarations to avoid breaking
the build.

* Platform/spi/ios/UIKitSPI.h:

Canonical link: https://commits.webkit.org/171990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196148 268f45cc-cd09-0410-ab3c-d52691b4dbfc